--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "build:server": "tsc --project tsconfig.json",
+    "build:client": "tsc --project tsconfig.client.json",
+    "build": "npm run build:server && npm run build:client",
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc",
     "serve": "npm run build && npm start"
   },
   "keywords": [],
@@ -15,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -24,6 +27,7 @@
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
+    "@types/connect-flash": "^0.0.40",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.10.2",
