--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-   "module": "NodeNext",
-   "moduleResolution": "NodeNext",
-   "lib": ["ES6"],
-   "sourceMap": true,
-   "strict": true,
-   "noImplicitAny": true,
-   "esModuleInterop": true,
-   "resolveJsonModule": true,
-   "allowJs": true,               
-    "outDir": "./dist",            
-    "rootDir": "./src",             
+    "target": "ES2020",              
+    "module": "ES2020",              
+    "moduleResolution": "Node",      
+    "outDir": "./dist",              
+    "rootDir": "./src",              
+    "strict": true,                  
+    "esModuleInterop": true,         
+    "resolveJsonModule": true,       
+    "declaration": true,             
+    "declarationMap": false,          
+    "noEmit": false                  
   },
-  "include": ["src/**/*"],              
-  "exclude": ["node_modules", "dist"]   
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "public", "views"]
 }
