--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.40",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.1",
+    "@types/method-override": "^3.0.0",
     "@types/node": "^22.10.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
