--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2020",              
-    "module": "ES2020",              
-    "moduleResolution": "Node",      
-    "outDir": "./dist",              
-    "rootDir": "./src",              
-    "strict": true,                  
-    "esModuleInterop": true,         
-    "resolveJsonModule": true,       
-    "declaration": true,             
-    "declarationMap": false,          
-    "noEmit": false                  
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": false,
+    "noEmit": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/**/*.d.ts"],
   "exclude": ["node_modules", "dist", "public", "views"]
 }
